<resources>
    <string name="app_name">SedaAIV</string>
    <string name="config">Enter data without any space after \'=\' and end the line with a \';\' also don\'t change the arrangement\nssid=pi;\npassword=12345678;\nProduct Reg.No=1;\nRTSP Link (Camera)=rtsp://192.168.0.10:8554/test;\nRTSP Link (Channel1)=rtsp://192.168.0.10:8556/test;\nRTSP Link (Channel2)=rtsp://192.168.0.10:8558/test;\nIP Address of Access Point=192.168.0.10;\n</string>
    <string name="title_home">Home</string>
    <string name="title_live_view">Live view</string>
    <string name="title_video_list">Video list</string>
    <string name="title_video_storage">Video storage</string>
    <string name="title_setting">Setting</string>
    <string name="desc_collapse_menu_btn">To collapse menu</string>
    <string name="desc_expand_menu_btn">To expand menu</string>
    <string name="home_connection_date">Connection date</string>
    <string name="home_user_name">User name</string>
    <string name="home_product_reg_num">Product registration number</string>
    <string name="home_network_state">Network state</string>
    <string name="live_menu_two_d">2D</string>
    <string name="live_menu_three_d">3D</string>
    <string name="live_menu_front_rear">Rear View</string>
    <string name="live_menu_rear_right_view">Rear Right View</string>
    <string name="live_menu_rear_left_view">Rear Left View</string>
    <string name="live_menu_front_view">Front View</string>
    <string name="desc_collapse_live_menu_btn">To collapse live menu</string>
    <string name="desc_expand_live_menu_btn">To expand live menu</string>
    <string name="btn_home_network_connect">Connect</string>
    <string name="home_network_state_connected">Connected</string>
    <string name="home_network_state_no_connection">No Connection</string>
    <string name="btn_video_type_total">Total</string>
    <string name="btn_video_type_driving">Driving</string>
    <string name="btn_video_type_parking">Parking</string>
    <string name="btn_video_type_event">Event</string>
    <string name="video_list_header_date">Date</string>
    <string name="video_list_header_time">Time</string>
    <string name="video_list_header_event">Event</string>
    <string name="video_list_header_file_size">File Size</string>
    <string name="video_list_header_download">Download</string>
    <string name="video_list_download_dialog_msg">Do you want to save the video?</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="video_total_count">Total</string>
    <string name="video_storage_delete">Delete</string>
    <string name="video_storage_header_play">Play</string>
    <string name="video_storage_delete_dialog_msg">Do you want to delete the video?</string>
    <string name="setting_menu_dvr_option">DVR Option</string>
    <string name="setting_menu_calibration">Calibration</string>
    <string name="setting_menu_network">Network</string>
    <string name="setting_menu_display">Display</string>
    <string name="setting_menu_camera_brightness">Camera Brightness</string>
    <string name="setting_menu_engineer_mode">Engineer Mode</string>
    <string name="calib_regi_explan">Calibration is required for the operation of this system.\nWould you like to setting the calibration?</string>
    <string name="calib_regi_explan_registed">Calibration data already exists.\nWould you like to reset the data?</string>
    <string name="calib_regi_notice">Setting the calibration can take a long time.\nWe recommend that you set up with professional help.</string>
    <string name="calib_regi_btn_setup">Setup</string>
    <string name="camera_channel_select_explan">How many cameras are installed?</string>
    <string name="calib_btn_prev">Prev</string>
    <string name="calib_btn_next">Next</string>
    <string name="calib_btn_finish">Finish</string>
    <string name="camera_channel_explan">Arrange the Calibration matts around the vehicle.</string>
    <string name="auto_calib_explan">The calibration routine is being performed.</string>
    <string name="pin_point_set_explan">Select a point and move the arrow to the corresponding locations in order.</string>
    <string name="pin_point_set_position">Front side</string>
    <string name="pin_point_set_remaining_position">1 / Left matt / Left front point</string>
    <string name="calib_complete_explan">Calibration success. Rotate the 3D image to make sure it is displayed correctly.</string>
</resources>