<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_live_view"
        android:icon="@drawable/live"
        android:title="@string/title_live_view" />

    <item
        android:id="@+id/navigation_video_list"
        android:icon="@drawable/videolist"
        android:title="@string/title_video_list" />

    <item
        android:id="@+id/navigation_video_storage"
        android:icon="@drawable/videostorage"
        android:title="@string/title_video_storage" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting"
        android:title="@string/title_setting" />
</menu>