<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.skyautonet.seda_aiv.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_live_view"
        android:name="com.skyautonet.seda_aiv.ui.liveview.LiveViewFragment"
        android:label="@string/title_live_view"
        tools:layout="@layout/fragment_live_view" />

    <fragment
        android:id="@+id/navigation_video_list"
        android:name="com.skyautonet.seda_aiv.ui.videolist.VideoListFragment"
        android:label="@string/title_video_list"
        tools:layout="@layout/fragment_video_list" />

    <fragment
        android:id="@+id/navigation_video_storage"
        android:name="com.skyautonet.seda_aiv.ui.videostorage.VideoStorageFragment"
        android:label="@string/title_video_storage"
        tools:layout="@layout/fragment_video_storage" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.skyautonet.seda_aiv.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>