<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_dialog_download" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/video_list_download_dialog_msg"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_btn_ok"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/btn_ok"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape_bg_btn_video_type_selected" />

                <TextView
                    android:id="@+id/tv_btn_cancel"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:text="@string/btn_cancel"
                    android:textSize="15sp"
                    android:textColor="#0045BC"
                    android:gravity="center"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/shape_bg_btn_video_type" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
