<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.skyautonet.seda_aiv.ui.setting.calibration.CalibCompleteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_calib_complete_header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/white_80"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_calib_complete_explan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calib_complete_explan"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/ll_calib_complete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.9">

            <TextView
                android:id="@+id/tv_calib_complete_btn_preview"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/calib_btn_prev"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/shape_bg_btn_video_type_selected" />

            <TextView
                android:id="@+id/tv_calib_complete_btn_finish"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/calib_btn_finish"
                android:textSize="17sp"
                android:textColor="#0045BC"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:padding="5dp"
                android:background="@drawable/shape_bg_btn_video_type" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>