<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.skyautonet.seda_aiv.ui.videolist.VideolistViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.videolist.VideoListFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_video_list" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_video_list_title"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_video_list_title"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_video_list_title"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_video_list"
                        android:textSize="17sp"
                        android:textColor="@color/black"
                        android:layout_marginStart="10dp"
                        app:layout_constraintLeft_toRightOf="@id/iv_video_list_title"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layout_constraintRight_toRightOf="parent">

                        <TextView
                            android:id="@+id/tv_btn_video_list_total"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:text="@string/btn_video_type_total"
                            android:textSize="15sp"
                            android:textColor="@color/color_btn_video_type_text"
                            android:gravity="center"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/selector_bg_btn_video_type" />

                        <TextView
                            android:id="@+id/tv_btn_video_list_driving"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:text="@string/btn_video_type_driving"
                            android:textSize="15sp"
                            android:textColor="@color/color_btn_video_type_text"
                            android:gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/selector_bg_btn_video_type" />

                        <TextView
                            android:id="@+id/tv_btn_video_list_parking"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:text="@string/btn_video_type_parking"
                            android:textSize="15sp"
                            android:textColor="@color/color_btn_video_type_text"
                            android:gravity="center"
                            android:layout_marginStart="2dp"
                            android:layout_marginEnd="2dp"
                            android:background="@drawable/selector_bg_btn_video_type" />

                        <TextView
                            android:id="@+id/tv_btn_video_list_event"
                            android:layout_width="70dp"
                            android:layout_height="match_parent"
                            android:text="@string/btn_video_type_event"
                            android:textSize="15sp"
                            android:textColor="@color/color_btn_video_type_text"
                            android:gravity="center"
                            android:layout_marginStart="2dp"
                            android:background="@drawable/selector_bg_btn_video_type" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/ll_video_list_search"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_video_list_title">

                    <TextView
                        android:id="@+id/tv_video_list_total"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/video_total_count"
                        android:textSize="17sp"
                        android:textColor="@color/color_btn_video_type_text"
                        android:gravity="center"
                        android:layout_marginEnd="10dp"/>

                    <EditText
                        android:id="@+id/et_video_list_search"
                        android:layout_width="150dp"
                        android:layout_height="match_parent"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:gravity="center_vertical|end"
                        android:layout_gravity="center"
                        android:paddingEnd="5dp"
                        android:drawableEnd="@drawable/ic_video_list_search"
                        android:background="@drawable/shape_bg_video_list_search" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@id/ll_video_list_search"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_video_list_header"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/shape_bg_video_list_header">

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/gl_v_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.2" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/gl_v_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.55" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/gl_v_event"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.7" />

                        <androidx.constraintlayout.widget.Guideline
                            android:id="@+id/gl_v_file_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintGuide_percent="0.85" />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/video_list_header_date"
                            android:textSize="11sp"
                            android:textColor="@color/black"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="@id/gl_v_date" />

                        <TextView
                            android:id="@+id/tv_time"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/video_list_header_time"
                            android:textSize="11sp"
                            android:textColor="@color/black"
                            app:layout_constraintLeft_toLeftOf="@id/gl_v_date"
                            app:layout_constraintRight_toRightOf="@id/gl_v_time" />

                        <TextView
                            android:id="@+id/tv_event"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/video_list_header_event"
                            android:textSize="11sp"
                            android:textColor="@color/black"
                            app:layout_constraintLeft_toLeftOf="@id/gl_v_time"
                            app:layout_constraintRight_toRightOf="@id/gl_v_event" />

                        <TextView
                            android:id="@+id/tv_file_size"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/video_list_header_file_size"
                            android:textSize="11sp"
                            android:textColor="@color/black"
                            app:layout_constraintLeft_toLeftOf="@id/gl_v_event"
                            app:layout_constraintRight_toRightOf="@id/gl_v_file_size" />

                        <TextView
                            android:id="@+id/tv_download"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/video_list_header_download"
                            android:textSize="11sp"
                            android:textColor="@color/black"
                            app:layout_constraintLeft_toLeftOf="@id/gl_v_file_size"
                            app:layout_constraintRight_toRightOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                        android:id="@+id/sr_video_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_video_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="layout_marginStart" />
                    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>