<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.skyautonet.seda_aiv.ui.setting.calibration.CalibRegiViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tv_calib_regi_explan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calib_regi_explan"
            android:textSize="17sp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_height="60dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_calib_regi_notice" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="!"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:gravity="center" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calib_regi_notice"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginLeft="15dp"
                android:gravity="left"
                android:layout_gravity="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_calib_regi_btn_setup"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/calib_regi_btn_setup"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="5dp"
            android:background="@drawable/shape_bg_btn_video_type_selected"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.95"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>